p2/default_app.yaml
# Deployment for the default app (App 3)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-app
  template:
    metadata:
      labels:
        app: default-app
    spec:
      containers:
      - name: nginx-default
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: default-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: default-html
        configMap:
          name: default-html-config
---
# Service for the default app
apiVersion: v1
kind: Service
metadata:
  name: default-app-service
spec:
  selector:
    app: default-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
